--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     </head>
     <body>
         <ul id="lista_cognomi"></ul>
+        <h3 id="my_position"></h3>
 
 
         <script type="text/javascript" src="js/script.js"></script>
